<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <ImageButton
        android:id="@+id/ibGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_keyboard_arrow_left_24"
        android:background="@color/invisible"
        android:contentDescription="@string/go_back" />

    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ibGoBack"
        android:layout_marginTop="30dp"
        android:text="@string/settings"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/llAdjustSpeed"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@id/tvSettings"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adjust_volume_with_speed"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <ImageButton
            android:id="@+id/ibVolumeEnable"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:background="@color/invisible"
            android:contentDescription="@string/volume_control_check"
            android:src="@drawable/baseline_radio_button_checked_24"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llAdjustSpeed"
        android:layout_marginTop="10dp"
        android:text="@string/control_volume_text"
        android:textColor="#474B4E" />

</RelativeLayout>