<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llTopMenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:background="@drawable/top_menu">

            <ImageButton
                android:id="@+id/ibSettings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/invisible"
                android:contentDescription="@string/settings"
                android:src="@drawable/settings"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSongs"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            tools:listitem="@layout/song_list_item"
            android:visibility="visible"/>

        <LinearLayout
            android:id="@+id/llCurrentPlaying"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/image_round_border"
            android:clickable="true">

            <ImageView
                android:id="@+id/ivCurrentSongImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/song_image"/>

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCurrentSongTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song_name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCurrentArtistName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_name"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/ibPlayPause"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:background="@color/white"
                android:contentDescription="@string/play_pause_button"
                android:src="@drawable/play" />

        </LinearLayout>

    </LinearLayout>




    <TextView
        android:id="@+id/tvLoadingData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_data"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_centerInParent="true"/>
</RelativeLayout>