<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageButton
        android:id="@+id/down_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@drawable/down_arrow"
        android:background="@color/invisible"
        android:contentDescription="@string/down_arrow" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_toEndOf="@+id/down_arrow"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        android:layout_margin="10dp"/>

    <ImageView
        android:id="@+id/ivCurrentSongImage"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_below="@id/down_arrow"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/song_image" />

    <LinearLayout
        android:id="@+id/songInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ivCurrentSongImage"
        android:padding="30dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvCurrentSongTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/song_name" />
            <TextView
                android:id="@+id/tvArtistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:text="@string/artist_name"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/ibSongLike"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/invisible"
            android:contentDescription="@string/song_like"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:src="@drawable/like"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/position"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/songInfo"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/time_number"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/position">
        <TextView
            android:id="@+id/elapsed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4" />
        <TextView
            android:id="@+id/remaining"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_number"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/ibPreviousSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleY="1.5"
            android:scaleX="1.5"
            android:contentDescription="@string/previous_song"
            android:src="@drawable/previous_song"
            android:background="@color/invisible"/>

        <ImageButton
            android:id="@+id/ibPlayPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:scaleY="1.5"
            android:scaleX="1.5"
            android:contentDescription="@string/play_pause_button"
            android:src="@drawable/play"
            android:background="@color/invisible"/>

        <ImageButton
            android:id="@+id/ibNextSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleY="1.5"
            android:scaleX="1.5"
            android:contentDescription="@string/next_song"
            android:src="@drawable/next_song"
            android:background="@color/invisible" />

    </LinearLayout>



</RelativeLayout>